vcluster_versioned_docs/version-0.35.0/_fragments/how-does-syncing-work.mdx
Since a tenant cluster lacks actual worker nodes and its own network, syncing is the process by which vCluster replicates resources between the tenant cluster and the Control Plane Cluster. 
This capability is handled by a component called the syncer, deployed by vCluster. The syncer is the core mechanism that enables vCluster to emulate a fully functional Kubernetes cluster. 
When the syncer fails or malfunctions, it can lead to resource inconsistencies, application failures, state drift, and operational errors.

By default, vCluster only syncs low-level resources, such as pods, secrets, configmaps, or services, but a user can 
enable many other resources for all use cases. vCluster control plane runs with a minimal set of RBAC permissions to allow execution in restricted environments. Certain resources require 
extra permissions to sync, which are automatically given to the vCluster ServiceAccount if you enable a resource that requires additional 
permissions. 

All fields of a resources are synced from either the tenant cluster to the Control Plane Cluster or the inverse (i.e. from the Control Plane Cluster to the tenant cluster). The direction on how
the sync of the resources is based on what section the resource is part of in the `vcluster.yaml`. There 
are a few exceptions for each resource where specific fields are kept in sync in both directions (that is, bi-directional sync). 

If the resource is being asked to sync from the tenant cluster to the Control Plane Cluster, vCluster copies the resources from the tenant cluster and sends it to the Control Plane Cluster to be created. There are 
a couple of additional labels added to the Control Plane Cluster resource object for vCluster to keep it in sync. The syncer starts watching for changes to the resource on either side. When the resource
is updated in the tenant cluster, the syncer copies those changes in the Control Plane Cluster. 

:::warning Syncing will overwrite resources
When you enable a sync, the syncer will usually copy changes in one direction. For example, if you are syncing pods from the tenant cluster to the Control Plane Cluster, when changes
are made to one of the pods in the Control Plane Cluster, those fields are overwritten when the sync occurs. There are a couple of fields that are exceptions that are supported due to bi-directional sync. 
:::

If the resource is being asked to sync from the Control Plane Cluster to the tenant cluster, as soon as that resource is created in the Control Plane Cluster, vCluster copies it to the tenant cluster. 
Any changes to the resource in the Control Plane Cluster are automatically applied to the resource in the tenant cluster.

When syncing resources, vCluster stores the mapping of the `VIRTUAL NAME <-> HOST NAME` for the actual resource, and the references of the other resources used by this resource. 
Tracking references helps the vCluster to understand what resources are still needed in the Control Plane Cluster. This important for secrets and configmaps because by default only the secrets and configmaps used by pods are actually synced to the Control Plane Cluster.

Assume you've started your vCluster with ingress syncing to the host enabled. The `sync` field will automatically deploy syncer to sync resources between the tenant cluster and the Control Plane Cluster.

``` vcluster.yaml
sync:
  toHost:
    ingresses:
      enabled: true
```

After the tenant cluster is up, the user creates an ingress in the tenant cluster.

```yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  tls:
  - hosts:
      - https-example.foo.com
    secretName: testsecret-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx
            port:
              number: 80
```

When vCluster copies the ingress to the Control Plane Cluster, the vCluster creates an ingress in the namespace of the tenant cluster with the following changes:

* **Name Rewritten**: vCluster rewrites the name of the resource to avoid conflicts in the Control Plane Cluster. The name is rewritten in the form of `NAME-x-NAMESPACE-x-VCLUSTER_NAME`
* **Namespace Rewritten**: vCluster rewrites the namespace of the resource to sync everything into the namespace of the deployed tenant cluster control plane.
* **Annotations / Labels Added**: vCluster adds annotations and labels to identify the resource in the Control Plane Cluster, which are pre-fixed with `vcluster.loft.sh/`.
<!-- vale off -->
* **References Rewritten**: vCluster rewrites the `spec.rules[*].http.paths[*].backend.service.name` and `spec.tls[*].secretName` to match the rewritten names of the resources in the Control Plane Cluster.
<!-- vale on -->


```yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    vcluster.loft.sh/object-host-name: nginx-x-default-x-vcluster
    vcluster.loft.sh/object-host-namespace: vcluster
    vcluster.loft.sh/object-kind: networking.k8s.io/v1, Kind=Ingress
    vcluster.loft.sh/object-name: nginx
    vcluster.loft.sh/object-namespace: default
    vcluster.loft.sh/object-uid: bb8bea39-8c0c-4295-8616-6a20b3b1900a
  labels:
    vcluster.loft.sh/managed-by: vcluster
    vcluster.loft.sh/namespace: default
  name: nginx-x-default-x-vcluster
  namespace: vcluster
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx-x-default-x-vcluster
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - https-example.foo.com
    secretName: testsecret-tls-x-default-x-vcluster
```

### Resource name length and truncation

This rule applies to resources that sync into the vCluster control plane's namespace, which is the default. If you enable [namespace syncing](../configure/vcluster-yaml/sync/to-host/advanced/namespaces.mdx) and a namespace matches one of your mappings, vCluster keeps the object name unchanged and only rewrites its namespace. Nothing below applies to that object. Namespaces that match no mapping still fall back to the rewriting described here.

vCluster caps every rewritten name at 63 characters. When `NAME-x-NAMESPACE-x-VCLUSTER_NAME` is longer than that, vCluster shortens it instead of failing the sync.

The cap is vCluster's own and applies to every resource type, so don't read it as a Kubernetes constraint. Kubernetes is stricter for some kinds and far looser for others. Service names are limited to 63 characters, but ServiceAccount, Secret, and ConfigMap names are DNS subdomains and may be up to 253. vCluster rewrites past 63 regardless of what the resource type would allow.

The shortened name keeps the first 52 characters of the full rewritten name. It then appends `-` followed by the first 10 characters of the hex-encoded SHA-256 digest. The digest covers the whole untruncated name, so two objects that share their first 52 characters still get distinct names.

For example, a ServiceAccount named `payments-service-account-with-a-very-long-name` in the `production-workloads` namespace of a tenant cluster named `team-alpha-vcluster` has this full rewritten name:

```
payments-service-account-with-a-very-long-name-x-production-workloads-x-team-alpha-vcluster
```

That name is 91 characters, so vCluster stores the object on the control plane cluster under this name instead:

```
payments-service-account-with-a-very-long-name-x-pro-d0698fbbcd
```

Truncated names are 63 characters. There is one exception. When the 52-character prefix ends with a dot, vCluster collapses the resulting `.-` sequence into a single `-`, so the name is 62 characters.

Names of 63 characters or fewer are never truncated, and no hash is appended.

To map a synced object on the control plane cluster back to its original name in the tenant cluster, read its `vcluster.loft.sh/object-name` annotation. vCluster sets it on every synced object, and it always carries the untruncated name.

For namespaced objects, `vcluster.loft.sh/object-namespace` carries the original namespace in the tenant cluster. Cluster-scoped objects have no namespace, so vCluster removes that annotation from them. Reverse-mapping automation must tolerate its absence rather than assume both annotations are present.

:::info Deriving synced names in automation
External systems that key off synced object names see the truncated name, not the name inside the tenant cluster. ServiceAccount-dependent integrations are the most common place this surfaces, including EKS Pod Identity, IRSA, GKE Workload Identity, and AKS Workload Identity. An IAM trust policy that references the untruncated name silently fails to match.

Rather than reimplementing this rule, resolve the name through the vCluster Platform API. For a worked example, see [Integrate EKS Pod Identity with vCluster](../third-party-integrations/pod-identity/eks-pod-identity.mdx).

The API always returns the single-namespace form shown above. It doesn't read your namespace mappings, so for an object in a mapped namespace it returns a name that doesn't exist on the control plane cluster. Use it only for objects that sync into the vCluster control plane's namespace.
:::

### Sync labels to the Control Plane Cluster

When syncing labels to the Control Plane Cluster, vCluster rewrites the following labels to avoid conflicts:

* `release` - This label must be rewritten when pods are synced to the single namespace where the vCluster control plane pod is running, but 
not rewritten when the pod is synced in a namespace that is synced from the tenant cluster to the Control Plane Cluster. 
* `vcluster.loft.sh/namespace`
* `vcluster.loft.sh/managed-by`
* `vcluster.loft.sh/controlled-by`
